  * removed "(oops?)" from installation for less confusion (in case someone actually looks at it)
  * added "unlimited" symbol to those users who are unlimited (better KDE compatibility as well, bc KDE shows program name when nothing is set)
  * rework notification about missing configuration, now it better explains that this is not really as bad as it sounds

 -- Eduards Bezverhijs <edzis@inbox.lv>  Mon, 1 Nov 2018 07:59:01 +0200

timekpr-beta (0.3.7~ppa1~ubuntu8) UNRELEASED; urgency=medium

  * improve KDE status icon compatibility (now there should be a text showing the time left)
  * improve indicator handling if appindicator is not available
  * improve packaging to recomend package dependencies needed for timekpr (this should help Ubuntu 18.04 users in default installations)

 -- Eduards Bezverhijs <edzis@inbox.lv>  Mon, 17 Sep 2018 08:02:17 +0300

timekpr-beta (0.3.7~ppa1~ubuntu7) UNRELEASED; urgency=medium

  * Improve notification handling (DBUS lazy init)
  * New notification limits:
  *   time left > 2hrs   = notifications every hour
  *   time left < 2hrs   = notifications every half an hour
  *   time left < 30mins = notifications every 10 minutes
  *   time left < 10mins = notifications every 5 minutes
  *   time left < 3mins = notifications every minute
  *   notifications are critical starting when time left < 10 minutes (critial means notifications try to stay on top of all they can)
  * Added debugging options (in case there are problems with client)

 -- Eduards Bezverhijs <edzis@inbox.lv>  Wed, 8 Aug 2018 09:32:47 +0300

timekpr-beta (0.3.7~ppa1~ubuntu6) UNRELEASED; urgency=medium

  * Improve packaging for non-Gnome DEs (now it's possible to use Timekpr in KDE5 just fine)
  * Trying to improve KDE integration (now it works great, except tooltip icon and text as in Unity)
  * Fixed race condition with delayed DBus initialization and user clicks

 -- Eduards Bezverhijs <edzis@inbox.lv>  Wed, 26 Mai 2018 09:32:17 +0300
